--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/date-fns": "^2.6.0",
+    "date-fns": "^1.30.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "material-ui-icons": "^1.0.0-beta.36",
